--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "scripts": {
         "test": "mocha build/test --recursive",
         "build": "tsc",
-        "commit": "vamtigerNodeTypescriptCommit --push --publish"
+        "commit": "vamtigerNodeTypescriptCommit --push --publish --keepTsConfig"
     },
     "repository": {
         "type": "git",
