--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
         "rollup": "^0.56.5",
         "rollup-plugin-typescript": "^0.8.1",
         "rollup-plugin-uglify": "^3.0.0",
+        "tslib": "^1.9.0",
         "vamtiger-argv": "^1.2.3",
         "vamtiger-copy-file": "0.0.9"
     }
