--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "vamtiger-bundle-typescript",
-    "version": "0.0.25",
+    "version": "0.0.26-0",
     "description": "Bundle typescript source into a single file.",
     "main": "build",
     "types": "build/types/index.d.ts",
@@ -39,7 +39,6 @@
         "source-map": "^0.7.2",
         "typescript": "^2.7.2",
         "vamtiger-bash": "0.0.16",
-        "vamtiger-create-file": "0.0.7",
         "vamtiger-get-file-data": "0.0.4",
         "vamtiger-node-typescript-commit": "0.0.51"
     },
@@ -49,6 +48,8 @@
         "rollup-plugin-uglify": "^3.0.0",
         "tslib": "^1.9.0",
         "vamtiger-argv": "^1.2.3",
-        "vamtiger-copy-file": "0.0.9"
+        "vamtiger-copy-file": "0.0.9",
+        "vamtiger-create-file": "0.0.7",
+        "vamtiger-get-file-text": "0.0.6"
     }
 }
