--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,10 @@
 {
     "compileOnSave": true,
     "compilerOptions": {
-      "target": "es2016",
+      "target": "es5",
+      "lib": [
+        "es2015"
+      ],
       "module": "commonjs",
       "outDir": "build",
       "strict": true,
@@ -15,4 +18,4 @@
     "include": [
           "source/**/*"
       ]
-  } 
+  }
