--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
         "@babel/core": "^7.4.5",
         "@babel/plugin-transform-destructuring": "^7.4.4",
         "babel-plugin-transform-es2015-destructuring": "^6.23.0",
+        "babel-plugin-transform-es2015-parameters": "^6.24.1",
         "rollup": "^0.56.5",
         "rollup-plugin-babel": "^4.3.2",
         "rollup-plugin-typescript": "^0.8.1",
